categories browser added

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,15 +1,17 @@
-<body>
-    <header>
-        <h1>Products</h1>
-    </header>
-    <div>
-        <ul>
-            <li>shirt</li>
-            <li>jeans</li>
-            <li>paper</li>
-            <li>copybook</li>
-            <li>cheese</li>
-            <li>bacon</li>
-        </ul>
-    </div>
-</body>
+<html>
+  <head>
+    <title>Products</title>
+  </head>
+  <body>
+    <h1>Products</h1>
+    <% products.forEach(function(product) { %>
+      <div>
+        <h2><%= product.name %></h2>
+        <form method="post" action="/add-to-cart">
+          <input type="hidden" name="product_id" value="<%= product.id %>">
+          <button type="submit">Add to Cart</button>
+        </form>
+      </div>
+    <% }); %>
+  </body>
+</html>
