--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -13,5 +13,10 @@
                 </form>
             </div>
          <% }); %>
+         <h2>Continue purchase</h2>
+         <form method="post" action="/checkout">
+          <input type="hidden" name="cart" value="<%= cart%>">
+           <button type="submit">check out</button>
+      </form>
     </body>
 </html>
