--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
         <li><a href="/register">register</a></li>
         <li><a href="/products">products</a></li>
         <li><a href = 'categories'>categories</a></li>
+        <li><a href = '/cart'>cart</a></li>
         <li><a href="/myaccount">my account</a></li>
     </ul>
 </nav>
